deprecated "rico" method as the "render" method now covers this functionality
git-svn-id: http://svn.codehaus.org/groovy/trunk@3500 a5544e8c-8a19-0410-ba12-f9af4593a198